# Emily1.0

./: .cursorignore  .cursorrules  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ABLITERATED_SETUP.md  AGENTS.md  AI.md  ARCHITECTURE.md  CLAUDE.md  COGNITIVE_MODEL.md  DECISIONS.md  EMILY_SYSTEM_REPORT.md  INTERACTION_PERSISTENCE_SUMMARY.txt  MEMORY_LOG.md  MULTILINGUAL_QUICKREF.txt  PSYCHOACOUSTICS_MODEL.md  README.md  SIGNAL_FLOW.md  THREAT_MODEL.md  TIMING_MODEL.md  TRAINING_GUIDE.md  VOICE_ARCHITECTURE.md  capture_error.sh  check_deps.py  check_syntax.py  check_tabby.sh  config.py  config.yaml  diagnose.py  docker-compose.yml  emily_server.py  find_usb_audio.py  free_ram.sh  gpu_check.py  install-extensions.sh  kill_bloat.sh  kill_now.sh  main.py  (+7 more)
.claude/: CLAUDE-activeContext.md  CLAUDE-decisions.md
.cursor/: mcp.json
.cursor/rules/: agent-system.mdc  agents.mdc  async-performance.mdc  cursor-tooling.mdc  desktop-ui.mdc  docker-infra.mdc  fastapi-api.mdc  llm-prompts.mdc  llm-providers.mdc  llm.mdc  memory-schema.mdc  memory.mdc  plugins.mdc  python-backend.mdc  python-tests.mdc  python.mdc  rag-ingestion.mdc  security-privacy.mdc  security.mdc  tauri.mdc  tests.mdc  vibe-tools.mdc  voice-pipeline.mdc  voice.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/: base.py  code_agent.py  conversation.py  memory_agent.py  monitor.py  onboarding.py  planner.py  reflection.py  registry.py  research.py  tool_builder.py
api/: app.py  auth.py  dashboard.html  settings_store.py  voice_dashboard.html
api/routes/: __init__.py  audio.py  chat_v1.py  conversations.py  graph.py  integrations.py  models_v1.py  onboarding.py  people.py  query.py  settings.py  singing.py  tts.py  vault.py  vision.py  voice_engine.py
conversation/: __init__.py  backchannel.py  emotion_sync.py  fsm.py  interrupt_handler.py  rhythm_sync.py  turn_detector.py  voice_engine.py
core/: bootstrap.py  brain_hub.py  bus.py  fsm.py  scheduler.py
core/loop_integration/: __init__.py  fleet_adapter.py  loop_agent.py  memory_bridge.py  tool_bridge.py
discord_analytics/: README.md  bot.py  requirements.txt  setup.sh
docs/: ABLITERATED_SETUP.md  CONFIG_GUIDE.md  CORE_VOICE_ANALYSIS.md  CURSOR-GUIDE.html  EMILY_GUIDE.md  INTERACTION_PERSISTENCE.md  MCP_SETUP_GUIDE.md  MODELS_AND_LANGUAGES.md  OWNER_PRIVACY_SUMMARY.txt  OWNER_PRIVACY_SYSTEM.md  RUN_EVERYTHING.md  SELECT_PLACEHOLDER_THEMING.md  TABBYAPI_QUICKREF.md  TABBYAPI_SETUP.md  TEST_REPORT.md  USB_AUDIO_SETUP.md  VISION_ACTIVATION_SUMMARY.md  VISION_QUICKREF.txt  VISION_SETUP.md  VOICE_SYSTEM_REPORT.md  VOICE_TESTING_REPORT.md  desktop_app.md
emily_chat/: __init__.py  app.py  config.py  controller.py  main.py  profiles.py  settings_manager.py
emily_chat/emily/: __init__.py  identity_contract.py  persona.py  response_filter.py  skills.py
emily_chat/export/: __init__.py  engine.py
emily_chat/models/: __init__.py  auto_router.py  base.py  cost_tracker.py  provider_factory.py  registry.py  streaming_engine.py  token_counter.py
emily_chat/storage/: __init__.py  database.py  models.py
emily_chat/ui/: __init__.py  async_bridge.py  code_block_widget.py  conversation_stream.py  custom_titlebar.py  emily_editor.py  input_panel.py  left_sidebar.py  main_window.py  markdown_renderer.py  right_panel.py  search_overlay.py  skill_editor.py  system_tray.py  theme_engine.py  top_bar.py
extraction/: __init__.py  deduplicator.py  entity_extractor.py  pipeline.py  relation_extractor.py
ingestion/: __init__.py  coordinator.py
ingestion/parsers/: __init__.py  conversation.py  ical.py  pdf.py  vcard.py
integrations/: __init__.py  automation.py  crews.py
llm/: anthropic_client.py  base.py  cache.py  client.py  critic_loop.py  fleet.py  llamacpp_client.py  orchestrator.py  prompt_builder.py  react_loop.py  recency_detector.py  router.py  speculative.py  streaming.py  structured_output.py  tabbyapi_client.py
marketing/: __init__.py  ad_generator.py
memory/: episodic.py  interaction_logger.py  knowledge_models.py  knowledge_store.py  manager.py  procedural.py  query_engine.py  sensory_buffer.py  working.py
modes/: engine.py  registry.py
observability/: brain_tap.py  event_recorder.py  logger.py  metrics.py  replay_engine.py  tracing.py
perception/: fusion.py
persona/: autobiography.py  constitution.py  emotional_state.py  profile.py  user_model.py
plugins/: base.py  registry.py  sandbox.py
proactive/: __init__.py  engine.py
rag/: chunker.py  ingestor.py  watcher.py
reasoning/: orchestrator.py
rules/: engine.py  evaluator.py
scripts/: audio-manager.sh  capture_error.sh  check_deps.py  diagnose.py  generate_breath_samples.py  gpu_check.py  prometheus.yml  quick_import_test.py  quick_test.py  searxng_settings.yml  setup-vision.sh  show-multilingual.sh  show-vision-status.sh  start-emily.sh  start_voice.sh  terminal_pro.py  test-vision.py  test_audio.py  test_emily.sh  test_imports.py  test_improved_terminal.py  train_emily_rvc.py  verify-tabbyapi.sh  view-interactions.py
security/: audit_log.py  consent.py  dead_man_switch.py  encryption.py  llm_guard.py  manager.py  pii_scrubber.py
self_improvement/: capability_gap_logger.py  engine.py  performance_tracker.py  prompt_evolver.py  rag_feedback.py
skills/: executor.py
tests/: conftest.py  simple_voice_test.py  test_core_voice.py  voice_competitive_analysis.py
timing/: __init__.py  latency_budget.py  metrics.py
ui/: replay_tui.py
users/: __init__.py  onboarding_enhanced.py  owner_identity.py  privacy_filter.py
voice/: __init__.py  breath_injector.py  expressive_engine.py  filler_engine.py  output_stream.py  prosody.py  prosody_planner.py  singing.py  tts.py  voice_clone.py
voice_engine/: config.py  conversation.py  pipeline.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web-solid/: eslint.config.js  index.html  package-lock.json  package.json  src-tauri  tsconfig.app.json  vite.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs
(+387 files in other folders)
