[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emily"
version = "1.0.0"
description = "Emily — Cognitive AI Voice Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "supernovyl" }]

dependencies = [
    # Config & env
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    # Async & concurrency
    "anyio>=4.4.0",
    "asyncio-mqtt>=0.16.2",
    # Message bus
    "pyzmq>=26.0.3",
    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    # HTTP
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "websockets>=12.0",
    # Storage
    "aiosqlite>=0.20.0",
    "qdrant-client>=1.10.1",
    # RAG & embeddings
    "rank-bm25>=0.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    # Text processing
    "tiktoken>=0.7.0",
    "langdetect>=1.0.9",
    # File parsing
    "pymupdf>=1.24.5",
    "python-docx>=1.1.2",
    "ebooklib>=0.18",
    "openpyxl>=3.1.5",
    "python-pptx>=0.6.23",
    "chardet>=5.2.0",
    # Graph
    "networkx>=3.3",
    # Security
    "cryptography>=42.0.8",
    # System
    "psutil>=6.0.0",
    "watchdog>=4.0.1",
    "Pillow>=10.3.0",
    "pyperclip>=1.9.0",
    # UI
    "rich>=13.7.1",
    "textual>=0.70.0",
    "argon2-cffi",
    "pyotp",
    "vobject",
    "icalendar",
]

[project.optional-dependencies]
gpu-cuda = [
    "faster-whisper>=1.0.3",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "transformers>=4.52.1",
    "kokoro>=0.3.4",
    "silero-vad>=5.1.2",
    "sentence-transformers>=3.1.0",
    "FlagEmbedding>=1.2.11",
    "mss>=9.0.2",
    "opencv-python>=4.10.0",
    "llama-cpp-python>=0.3.0",
]
# Vision/emotion (deepface): install manually if needed — pulls tensorflow, no Py3.14 wheels yet
# Coqui TTS / XTTS and singing (MusicGen, RVC): install manually if needed — they pull
# networkx<3 or torchaudio<2.1.2 and conflict with base/gpu-cuda. Use a separate venv.
cpu-only = [
    "faster-whisper>=1.0.3",
    "kokoro>=0.3.4",
    "silero-vad>=5.1.2",
    "openwakeword>=0.6.0",
    "sentence-transformers>=3.1.0",
    "FlagEmbedding>=1.2.11",
    "mss>=9.0.2",
    "opencv-python>=4.10.0",
]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.9",
    "hypothesis>=6.103.1",
    "respx>=0.21.1",
    "time-machine>=2.14.1",
]
desktop = [
    "PySide6>=6.7",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "markdown-it-py[linkify,plugins]>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pygments>=2.18.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
emily = "emily.main:cli"
emily-chat = "emily_chat.main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["emily"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing -q"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "ui/web/*"]
