[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emily"
version = "1.0.0"
description = "Emily — Cognitive AI Voice Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "supernovyl" }]

dependencies = [
    # Config & env
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    # Async & concurrency
    "anyio>=4.4.0",
    "aiomqtt>=2.0.0",
    # Message bus
    "pyzmq>=26.0.3",
    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    # HTTP & LLM clients
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "ollama>=0.3.0",
    "fastapi>=0.111.0",
    # Encryption
    "pyrage>=1.1.0",
    "uvicorn[standard]>=0.30.1",
    "websockets>=12.0",
    # Storage
    "aiosqlite>=0.20.0",
    "qdrant-client>=1.10.1",
    # RAG & embeddings
    "rank-bm25>=0.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    # Audio / Voice
    "faster-whisper>=1.0.3",
    # Text processing
    "tiktoken>=0.8.0",
    "langdetect>=1.0.9",
    # File parsing
    "pymupdf>=1.24.5",
    "python-docx>=1.1.2",
    "ebooklib>=0.18",
    "openpyxl>=3.1.5",
    "python-pptx>=0.6.23",
    "chardet>=5.2.0",
    # Graph
    "networkx>=3.3",
    # Security
    "cryptography>=42.0.8",
    # System
    "psutil>=6.0.0",
    "watchdog>=4.0.1",
    "Pillow>=10.3.0",
    "pyperclip>=1.9.0",
    # UI
    "rich>=13.7.1",
    "textual>=0.70.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "vobject>=0.9.7",
    "icalendar>=5.0.0",
    "noisereduce>=3.0.3",
    "edge-tts>=7.2.7",
    "kokoro>=0.9.4",
    "transformers>=5.2.0",
    "sounddevice>=0.5.5",
    # LLM caching
    "diskcache>=5.6.0",
    # PII detection (Presidio handles spaCy internally)
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[project.optional-dependencies]
gpu-cuda = [
    "faster-whisper>=1.0.3",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "transformers>=4.52.1",
    "kokoro>=0.3.4",
    "silero-vad>=5.1.2",
    # Wake word: openwakeword uses ONNX framework (inference_framework="onnx" in config)
    # On Python 3.13+: pip install --no-deps openwakeword && pip install onnxruntime
    "onnxruntime>=1.17.0",
    "openwakeword>=0.6.0",
    "sentence-transformers>=3.1.0",
    "rerankers>=0.5.0",
    "FlagEmbedding>=1.2.11",
    "mss>=9.0.2",
    "opencv-python>=4.10.0",
    "llama-cpp-python>=0.3.0",
    "sounddevice>=0.5.0",
    "spacy>=3.7.0",
    "deepfilternet>=0.5",
]
# llm-guard: install manually if needed (pip install llm-guard) — conflicts with
# transformers>=5.x in base deps. The security/llm_guard.py module has graceful fallback.
# chatterbox-tts: install manually (pip install chatterbox-tts) — pins transformers==4.46.3,
# conflicts with base deps. voice_engine/providers/tts/chatterbox_tts.py has lazy import.
# Vision/emotion (deepface): install manually if needed — pulls tensorflow, no Py3.14 wheels yet
# Coqui TTS / XTTS and singing (MusicGen, RVC): install manually if needed — they pull
# networkx<3 or torchaudio<2.1.2 and conflict with base/gpu-cuda. Use a separate venv.
cpu-only = [
    "faster-whisper>=1.0.3",
    "kokoro>=0.3.4",
    "silero-vad>=5.1.2",
    "onnxruntime>=1.17.0",
    "openwakeword>=0.6.0",
    "sentence-transformers>=3.1.0",
    "rerankers>=0.5.0",
    "FlagEmbedding>=1.2.11",
    "mss>=9.0.2",
    "opencv-python>=4.10.0",
    "sounddevice>=0.5.0",
    "spacy>=3.7.0",
]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "basedpyright>=1.20.0",
    "ruff>=0.4.9",
    "pre-commit>=4.0",
    "hypothesis>=6.103.1",
    "respx>=0.21.1",
    "time-machine>=2.14.1",
]
desktop = [
    "PySide6>=6.7",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "markdown-it-py[linkify,plugins]>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pygments>=2.18.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
emily = "emily.main:cli"
emily-chat = "emily_chat.main:main"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "api",
    "core",
    "conversation",
    "emily_chat",
    "extraction",
    "ingestion",
    "llm",
    "memory",
    "observability",
    "perception",
    "persona",
    "plugins",
    "proactive",
    "rag",
    "security",
    "self_improvement",
    "timing",
    "voice",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TC"]
ignore = [
    "E501",   # line length (handled by formatter)
    "TC001",  # type-checking imports (app)
    "TC003",  # type-checking imports (stdlib)
    "E402",   # module-level imports not at top
    "SIM105", # contextlib.suppress
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "B904",   # raise from (refactor later)
    "SIM115", # context manager for opening files (test patterns)
    "SIM117", # nested with statements (refactor later)
    "B017",   # blind exception in tests (acceptable for availability checks)
]  # Deferred: re-enable and fix in follow-up sprint

[tool.ruff.lint.isort]
known-first-party = ["emily"]

[tool.basedpyright]
pythonVersion = "3.13"
pythonPath = ".venv/bin/python"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov-report=term-missing -q"

[tool.coverage.run]
source = [
    "agents", "api", "core", "conversation", "emily_chat",
    "extraction", "ingestion", "llm", "memory", "observability",
    "perception", "persona", "plugins", "proactive", "rag",
    "security", "self_improvement", "timing", "voice",
]
omit = ["tests/*", "scripts/*", "ui/web/*"]

[tool.uv.sources]
