[package]
name = "emily-app"
version = "0.1.0"
description = "Emily AI Assistant"
authors = ["Emily"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = { version = "2", optional = true }

[features]
default = []
notification = ["tauri-plugin-notification"]
